--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,8 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Libraries/lwjgl-2.9.3/native/windows"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Danny/Documents/GitHub/YouTube-tutorials/lib/lwjgl_util.jar"/>
+	<classpathentry kind="lib" path="C:/lwjgl-2.9.3/lwjgl-2.9.3/jar/slick.jar"/>
+	<classpathentry kind="lib" path="C:/lwjgl-2.9.3/lwjgl-2.9.3/jar/slick-util.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
